modified:   .gitignore 	modified:   .vscode/settings.json 	modified:   _posts/2022-07-02-Blog.md

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,8 @@
 {
     "deepscan.enable": true,
-    "git.autofetch": true
+    "git.autofetch": true,
+    "cSpell.words": [
+        "entwicklerprogramm",
+        "ϨH𐨩𐌰"
+    ]
 }
