modified:   .github/workflows/codeql-analysis.yml 	modified:   .vscode/settings.json

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "deepscan.enable": true,
     "git.autofetch": true,
     "cSpell.words": [
+        "buildscript",
+        "codeql",
         "entwicklerprogramm",
         "hackerdom",
         "ϨH𐨩𐌰"
