modified:   .vscode/settings.json 	modified:   _config.yml

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,10 +2,12 @@
     "deepscan.enable": true,
     "git.autofetch": true,
     "cSpell.words": [
+        "Autobuild",
         "buildscript",
         "codeql",
         "entwicklerprogramm",
         "hackerdom",
-        "ϨH𐨩𐌰"
+        "ϨH𐨩𐌰",
+        "ﾟДﾟщ"
     ]
 }
